--- a/NLHEEngine/NLHEEngine.csproj
+++ b/NLHEEngine/NLHEEngine.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Deck.cs" />
+    <Compile Include="Models\Game.cs" />
     <Compile Include="Models\HandForEval.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subroutines\HandEvaluator.cs" />
