--- a/NLHEEngine/NLHEEngine.csproj
+++ b/NLHEEngine/NLHEEngine.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subroutines\HandEvaluator.cs" />
+    <Compile Include="TestSubroutines\CardReporter.cs" />
     <Compile Include="TestSubroutines\TestSubroutine.cs" />
   </ItemGroup>
   <ItemGroup>
